--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,11 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+    "compilerOptions": {
+      "baseUrl": "./",
+      "paths": {
+        "windicss/*": ["node_modules/windicss/*"]
+      }
+    }
 }
